--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@cypress/react": "^5.12.4",
+    "cypress": "^9.6.0"
   }
 }
