--- a/.github/workflows/le-frontend-workflow.yml
+++ b/.github/workflows/le-frontend-workflow.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   cypress-test:
     runs-on: ubuntu-latest
-    container: docker pull cypress/included:9.6.0
+    container: cypress/included:9.6.0
     steps: 
     
       - uses: actions/checkout@v3
