--- a/.github/workflows/le-frontend-workflow.yml
+++ b/.github/workflows/le-frontend-workflow.yml
@@ -20,7 +20,7 @@ jobs:
           $(npm bin)/cypress verify 
           
       - name: Run Cypress tests 
-        run: npm run test:chrome 
+        run: npm run test 
         continue-on-error: false
         
       - name: Copy test execution videos and screenshots
