--- a/.github/workflows/le-frontend-workflow.yml
+++ b/.github/workflows/le-frontend-workflow.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   cypress-test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     container: cypress/included:9.6.0
     steps: 
     
