--- a/.github/workflows/le-frontend-workflow.yml
+++ b/.github/workflows/le-frontend-workflow.yml
@@ -13,6 +13,7 @@ jobs:
     container: cypress/included:9.6.0
     steps: 
     
+      - uses: actions/cache@v2
       - uses: actions/checkout@v3
       - name: Install Cypress and Verify
         run: |
