adding user oo1

--- a/.github/workflows/le-frontend-workflow.yml
+++ b/.github/workflows/le-frontend-workflow.yml
@@ -10,10 +10,11 @@ on:
 jobs:
   cypress-test:
     runs-on: ubuntu-latest
-    container: cypress/included:9.6.0
+    container: 
+      image: cypress/included:9.6.0
+      options: --user 1001
+      
     steps: 
-    
-      - uses: actions/cache@v2
       - uses: actions/checkout@v3
       - name: Install Cypress and Verify
         run: |
