--- a/.github/workflows/le-frontend-workflow.yml
+++ b/.github/workflows/le-frontend-workflow.yml
@@ -13,10 +13,11 @@ jobs:
     container: 
       image: cypress/included:9.6.0
       options: --user 1001
-      
+
     steps: 
       - uses: actions/checkout@v3
       - name: Install Cypress and Verify
+      - uses: actions/cache@v2
         run: |
           npm ci
           $(npm bin)/cypress verify 
