--- a/.github/workflows/le-frontend-workflow.yml
+++ b/.github/workflows/le-frontend-workflow.yml
@@ -15,7 +15,7 @@ jobs:
     steps: 
       - uses: actions/checkout@v3
       - name: Install Cypress and Verify
-     
+        uses: actions/cache@v2
         run: |
           npm ci
           $(npm bin)/cypress verify 
