more workflow commands

--- a/.github/workflows/le-frontend-workflow.yml
+++ b/.github/workflows/le-frontend-workflow.yml
@@ -10,12 +10,23 @@ on:
 jobs:
   cypress-test:
     runs-on: ubuntu-latest
-    container: cypress/included:9.6.0
+    container: 
+      image: cypress/included:9.6.0
+      options: --user 1001
 
     steps: 
       - uses: actions/checkout@v3
+
       - name: Install Cypress and Verify
         uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('yarn.lock') }}-
+            
         run: |
           npm ci
           $(npm bin)/cypress verify 
