--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@cypress/react": "^5.12.4",
-    "cypress": "^9.6.0"
+    "cypress": "^9.6.0",
+    "cypress-mochawesome-reporter": "^3.0.1"
   }
 }
