--- a/.github/workflows/le-frontend-workflow.yml
+++ b/.github/workflows/le-frontend-workflow.yml
@@ -28,11 +28,11 @@ jobs:
         run: npm run test 
         continue-on-error: false
         
-      - name: Copy test execution videos and screenshots
-        run: | 
-          mkdir test-summary 
-          cp -r cypress/videos public/videos 
-          cp -r cypress/screenshots public/screenshots 
+      # - name: Copy test execution videos and screenshots
+      #   run: | 
+      #     mkdir test-summary 
+      #     cp -r cypress/videos public/videos 
+      #     cp -r cypress/screenshots public/screenshots 
           
       - name: Copy test report from cypress to gh-pages folder 
         run: | 
