--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v2
+      - name: Install and Verify Cypress
         run: |
           npm ci
           $(npm bin)/cypress verify
