without cache meerhn

--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -19,10 +19,9 @@ jobs:
           npm ci
           $(npm bin)/cypress verify
 
-      - uses: actions/cache@v2
-        with: 
-          token: ${{ github.token }}
-          
+      # - uses: actions/cache@v2
+     
+
       - name: Run Cypress tests
         run: npm run test
         continue-on-error: false
