--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -32,8 +32,8 @@ jobs:
       #     cp -r cypress/screenshots public/screenshots
       - name: Copy test report from cypress to Github Pages
         run: |
-          mkdir build
-          cp -r cypress/reports/index.html build
+          mkdir report-folder
+          cp -r cypress/reports/index.html report-folder
       # - name: Merge test reports
       #   run: npm run combine:report
       # - name: Generate HTML report
@@ -43,4 +43,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          # publish_dir: ./public
+          publish_dir: ./report-folder
